add main block to contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -161,7 +161,18 @@
         </p>
       </div>
     </header>
-
+    <main>
+      <div class="contact_container">
+        <div class="head">
+          <h2 class="heading-2 mb-sm">Technologies</h2>
+          <p class="technologies-page__text">
+            Using the right technology for the right problem is our mantra. We
+            are agile about learning new processes and tools to save time and
+            reduce complexity.
+          </p>
+        </div>
+      </div>
+    </main>
     <footer class="footer">
       <div class="footer__contact">
         <img class="logo" src="img/logo.png" alt="logo" />
