change text for contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -164,11 +164,11 @@
     <main>
       <div class="contact_container">
         <div class="head">
-          <h2 class="heading-2 mb-sm">Technologies</h2>
+          <h2 class="heading-2 mb-sm">Get in touch</h2>
           <p class="technologies-page__text">
-            Using the right technology for the right problem is our mantra. We
-            are agile about learning new processes and tools to save time and
-            reduce complexity.
+            Please feel free to get in touch with us via any convenient means
+            (phone, whatsapp, email, submit a contact form). We will be glad to
+            answer your questions as soon as possible.
           </p>
         </div>
       </div>
